--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Profile Lister extension where customers can create a lister profile in which all users can view the freelancer’s list & their profile details.",
     "type": "magento2-module",
     "require": {
-        "php": "7.0.2|7.0.4|~7.1.0|~7.1.3|~7.2.0|~7.3.0|~7.4.0|~8.1.0"
+        "php": "7.0.2|7.0.4|~7.1.0|~7.1.3|~7.2.0|~7.3.0|~7.4.0"
     },
-    "version": "1.1.2",
+    "version": "1.1.3",
     "authors": [
         {
             "name": "Yudiz Solutions Pvt. Ltd.",
