--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Profile Lister extension where customers can create a lister profile in which all users can view the freelancer’s list & their profile details.",
     "type": "magento2-module",
     "require": {
-        "php": "7.0.2|7.0.4|~7.1.0|~7.1.3|~7.2.0|~7.3.0|~7.4.0"
+        "php": "~5.5.0|~5.6.0|~7.0.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.3.0|~7.4.0|~8.1.0"
     },
     "version": "1.1.2",
     "authors": [
@@ -24,9 +24,8 @@
         "files": [
             "registration.php"
         ],
-        "psr-4": {
+        "PSR-4": {
             "Yudiz\\Freelancer\\": ""
         }
-    },
-    "minimum-stability": "stable"
+    }
 }
