--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "files": [
             "registration.php"
         ],
-        "PSR-4": {
+        "psr-4": {
             "Yudiz\\Freelancer\\": ""
         }
     }
